--- a/resources/views/site/css/style.css
+++ b/resources/views/site/css/style.css
@@ -163,8 +163,9 @@ h1 {
 }
 
 .btn-secundary:hover {
-    background-color: #BFE6DC;
-    border-radius: 0px;
+    background-color: #007E91;
+    border-radius: 50px;
+    color: #FFF;
 }
 
 .fundo2 {
@@ -651,7 +652,6 @@ ul.social-icons {
     transition: .5s;
     background-color: #322f30;
     border-radius: 10px;
-
 }
 .fa-github:hover {
     background-color: #5a32a3;
